# gpt2-scratch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  custom_state_dict.py
src/: CMakeLists.txt  bpe_tokenizer.cpp  bpe_tokenizer.h  gpt2.cpp  types.h
test/: CMakeLists.txt  test.cpp
